Add weekdays to team

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -11,11 +11,11 @@
 
   <div class="content" >
 
-    <p>
-      Which kind of notifications should this team receive?
-    </p>
     <%= form_for(@team, url: organisation_team_path(@organisation, @team)) do |f| %>
       <input name="_method" type="hidden" value="patch" />
+      <p>
+        Which kind of notifications should this team receive?
+      </p>
       <div class="form-group">
         <%= f.check_box :version_notifications, :style => "vertical-align: top;", :id => "version_notifications" %>
         <label for="version_notifications" style="display: inline; font-size: 12px; margin-right: 15px;">
@@ -28,6 +28,39 @@
         <%= f.check_box :security_notifications, :style => "vertical-align: top;", :id => "security_notifications" %>
         <label for="security_notifications" style="display: inline; font-size: 12px; margin-right: 15px;">
           Security vulnerabilities
+        </label>
+      </div>
+      <p>
+        On which days should the team receive the notifications?
+      </p>
+      <div class="form-group">
+        <%= f.check_box :monday, :style => "vertical-align: top;", :id => "monday" %>
+        <label for="monday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Monday
+        </label>
+        <%= f.check_box :tuesday, :style => "vertical-align: top;", :id => "tuesday" %>
+        <label for="tuesday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Tuesday
+        </label>
+        <%= f.check_box :wednesday, :style => "vertical-align: top;", :id => "wednesday" %>
+        <label for="wednesday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Wednesday
+        </label>
+        <%= f.check_box :thursday, :style => "vertical-align: top;", :id => "thursday" %>
+        <label for="thursday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Thursday
+        </label>
+        <%= f.check_box :friday, :style => "vertical-align: top;", :id => "friday" %>
+        <label for="friday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Friday
+        </label>
+        <%= f.check_box :saturday, :style => "vertical-align: top;", :id => "saturday" %>
+        <label for="saturday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Saturday
+        </label>
+        <%= f.check_box :sunday, :style => "vertical-align: top;", :id => "sunday" %>
+        <label for="sunday" style="display: inline; font-size: 12px; margin-right: 15px;">
+          Sunday
         </label>
       </div>
       <div class="form-group">
