Add padding-top to pdf multi export

--- a/app/views/lwl_pdf/lwl_pdf_multi.html.erb
+++ b/app/views/lwl_pdf/lwl_pdf_multi.html.erb
@@ -74,7 +74,7 @@
 
       <% if projects && !projects.empty? %>
         <% projects.each do |project| %>
-          <div>
+          <div style="padding-top: 15px;">
             <p>
               <b>Project:</b> <%= project.name %> <span class="small">(<%= project.id.to_s %>)</span> <br/>
               <b>Bill of materials:</b>
