Update PDF templates

--- a/app/views/lwl_pdf/lwl_pdf.html.erb
+++ b/app/views/lwl_pdf/lwl_pdf.html.erb
@@ -63,6 +63,10 @@
       .small{
         font-size: 10px;
       }
+      thead th { height: 2.1cm}
+      thead { display: table-header-group }
+      tfoot { display: table-row-group }
+      tr { page-break-inside: avoid }
     </style>
   </head>
   <body>
