--- a/app/views/lwl_pdf/lwl_pdf_multi.html.erb
+++ b/app/views/lwl_pdf/lwl_pdf_multi.html.erb
@@ -63,6 +63,10 @@
       .small{
         font-size: 10px;
       }
+      thead th { height: 2.1cm}
+      thead { display: table-header-group }
+      tfoot { display: table-row-group }
+      tr { page-break-inside: avoid }
     </style>
   </head>
   <body>
@@ -81,8 +85,8 @@
             </p>
 
             <table class="list">
-              <thead style="display: table-header-group">
-                <tr style="page-break-inside: avoid">
+              <thead>
+                <tr>
                   <td class="left">Status</td>
                   <td class="left">Component</td>
                   <td class="left">Version</td>
@@ -92,7 +96,7 @@
               <tbody>
                 <% [:whitelisted, :unknown, :violated].each do |key| %>
                   <% project.lwl_pdf_list[key].each do |dep| %>
-                    <tr style="page-break-inside: avoid">
+                    <tr>
                       <td class="left"> <%= key.to_s %> </td>
                       <td class="left">
                         (<%= dep[:language] %>) <%= dep[:component] %>
