Update view for pullrequests

--- a/app/views/pullrequests/_pullrequest_content.html.erb
+++ b/app/views/pullrequests/_pullrequest_content.html.erb
@@ -10,6 +10,7 @@
     </a><br/>
     Dependencies with security vulnerabilities: <b><%= pr.security_count %></b><br/>
     Dependencies with unknown licenses: <b><%= pr.unknown_license_count %></b><br/>
+    Dependencies which violate a license whitelist: <b><%= pr.lwl_violation_count %></b><br/>
     <span style='font-size: 10px;'><%= pr.updated_at %></span>
   </div>
 
