--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -117,7 +117,7 @@
     </div>
 
     <% if Rails.env.enterprise? != true %>
-        <div class="content-section-b">
+        <div class="content-section-b lp-video">
             <div class="container" style="text-align: center;">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/z-rp2TT4aXQ" frameborder="0" allowfullscreen></iframe>
             </div>
