Simplify message on landing page.

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -76,7 +76,7 @@
                     <div class="intro-message">
                        <h1>Version<span style="color: orange;">Eye</span></h1>
                        <h3>
-                        notifies you about out-dated dependencies, security vulnerabilities and license violations<br/>
+                        notifies you about out-dated dependencies, security vulnerabilities and license violations
                         in your Git repositories
                        </h3>
                     </div>
