--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -30,6 +30,8 @@
 
     <a href="https://www.youtube.com/user/VersionEye/videos" class="footer_link_margin" title="YouTube" target="new_YT" ><i class="fa fa-youtube footer_social_icon" ></i></a>
 
+    <a href="https://vimeo.com/versioneye" class="footer_link_margin" title="Vimeo" target="new_V" ><i class="fa fa-vimeo footer_social_icon" ></i></a>
+
     <a href="http://pinterest.com/versioneye/pins/" class="footer_link_margin" target="new_Pinterest" title="Pinterest" ><i class="fa fa-pinterest footer_social_icon" ></i></a>
   </div>
 
