--- a/app/views/shared/_feature_security.html.erb
+++ b/app/views/shared/_feature_security.html.erb
@@ -11,12 +11,11 @@
 libraries! How do you ensure that you are not using dependencies which has
 security vulnerabilities? You don't! VersionEye is checking multiple security databases
 every day and knows which artifacts are vulnerable. VersionEye can monitor your project and send you security
-notifications if one of your dependencies has a known security vulnerability. <br/>
-Currently this feature works for Java, Python, PHP, Node.JS and Ruby.
+notifications if one of your dependencies has a known security vulnerability.
             </p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6" style="text-align: center; vertical-aligne: middle; padding-top: 100px;">
-            <span class="fa fa-shield" style="font-size: 180px;"></span>
+            <%= link_to image_tag("marketing/01-veye-security.png", :style => "width: 100%;"), "/assets/marketing/01-veye-security.png" %>
         </div>
     </div>
 
