--- a/app/views/shared/_who_is_using_it.html.erb
+++ b/app/views/shared/_who_is_using_it.html.erb
@@ -6,11 +6,22 @@
     <p class="cite_section">
       <cite>“Automated version notifications of open source and self developed closed source components by VersionEye Enterprise are very helpful especially to our distributed iOS teams. They help reducing coordination and communication efforts. The VersionEye team always did a great job supporting us with individual features!”</cite><br/>
       <div>
-        <%= image_tag 'cites/alexander-greim_75.jpg', :class => "img-rounded" %> <b>Alexander Greim (Director Mobile Engineering @ <a href="https://www.xing.com">XING</a> AG)</b>
+        <table>
+          <colgroup>
+            <col width="75px;" />
+            <col width="*" />
+          </colgroup>
+          <tr>
+            <td>
+              <%= image_tag 'cites/alexander-greim_75.jpg', :class => "img-rounded" %>
+            </td>
+            <td style="padding-left: 10px;">
+              <b>Alexander Greim <br/>
+                 Director Mobile Engineering @ <a href="https://www.xing.com">XING</a> AG</b>
+            </td>
+          </tr>
+        </table>
       </div>
-    </p>
-    <p class="lead">
-      Download the full <a href="/docs/XING-Customer-Success-Story.pdf">customer success story with XING</a>.
     </p>
 
     <hr/>
@@ -18,12 +29,22 @@
     <p class="cite_section">
       <cite>“VersionEye Enterprise takes the use of open source in our enterprise software development to the next level, helps optimizing our processes and makes our software development even more productive than before.”</cite><br/>
       <div>
-        <%= image_tag 'cites/matthias-fessenbecker_75.jpg', :class => "img-rounded" %>
-        <b>Matthias Feßenbecker (CTO @ <a href="http://www.seeburger.com">SEEBURGER</a> AG)</b>
+        <table>
+          <colgroup>
+            <col width="75px;" />
+            <col width="*" />
+          </colgroup>
+          <tr>
+            <td>
+              <%= image_tag 'cites/matthias-fessenbecker_75.jpg', :class => "img-rounded" %>
+            </td>
+            <td style="padding-left: 10px;">
+              <b>Matthias Feßenbecker <br/>
+                 CTO @ <a href="http://www.seeburger.com">SEEBURGER</a> AG</b>
+            </td>
+          </tr>
+        </table>
       </div>
-    </p>
-    <p class="lead">
-      Download the full <a href="/docs/Seeburger-Customer-Success-Story.pdf">customer success story with Seeburger AG</a>.
     </p>
 
     <hr/>
@@ -31,7 +52,21 @@
     <p class="cite_section">
       <cite>“We are using the VersionEye API to keep our internally hosted NodeJS projects up-to-date. We integrated the VersionEye API into our Continuous Integration Lifecycle via the NPM module versioneye-update and it saves us the hassle for checking updates manually.”</cite><br/>
       <div>
-        <%= image_tag 'cites/jens_doose_75.jpg', :class => "img-rounded" %> <b>Jens Doose (CEO @ <a href="http://www.onwerk.de">Onwerk</a> GmbH)</b>
+        <table>
+          <colgroup>
+            <col width="75px;" />
+            <col width="*" />
+          </colgroup>
+          <tr>
+            <td>
+              <%= image_tag 'cites/jens_doose_75.jpg', :class => "img-rounded" %>
+            </td>
+            <td style="padding-left: 10px;">
+              <b>Jens Doose<br/>
+                 CEO @ <a href="http://www.onwerk.de">Onwerk</a> GmbH</b>
+            </td>
+          </tr>
+        </table>
       </div>
     </p>
 
