--- a/app/views/shared/_feature_license.html.erb
+++ b/app/views/shared/_feature_license.html.erb
@@ -11,7 +11,8 @@ components! Some of the components are published under a
 <a href="http://en.wikipedia.org/wiki/Permissive_free_software_licence">permissive</a>
 and others under a
 <a href="http://en.wikipedia.org/wiki/Copyleft">copyleft</a> license.
-If you develop closed source software you should avoid copyleft licenses!
+If you develop closed source software you should avoid copyleft licenses like GPL!
+<b>Otherwise you have to open source your project as well!</b>
 VersionEye can check all your open source dependencies against a
 <a href="http://blog.versioneye.com/2014/09/15/license-whitelist/">license whitelist</a>
 and notify you about violations! This checks can happen in real time and your software team
@@ -20,7 +21,7 @@ break your build on the CI server if there is a license violation.
             </p>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6" style="padding-top: 50px; text-align: center;">
-            <%= image_tag "marketing/chart-license-ratio-1.png", :style => "width: 280px;" %>
+            <%= link_to image_tag("marketing/01-veye-licenses.png", :style => "width: 100%;"), "/assets/marketing/01-veye-licenses.png" %>
         </div>
     </div>
 </div>
