--- a/app/views/shared/_feature_version.html.erb
+++ b/app/views/shared/_feature_version.html.erb
@@ -6,11 +6,17 @@
             <div class="clearfix"></div>
             <h2 class="section-heading" >Version Notifications</h2>
             <p class="lead">
-              VersionEye notifies you about outdated dependencies in your software projects. Nowadays software projects are based on many open source and self developed components. Checking manually for updates for these components is a very time consuming task and not fun at all! VersionEye notifies software developers about outdated dependencies in their projects. That way they can save a lot of time and focus on development.
+              VersionEye notifies you about outdated dependencies in your software projects.
+              Nowadays software projects are based on many open source and self developed components.
+              Checking manually for updates for these components is a very time consuming task and not fun at all!
+              VersionEye notifies software developers about outdated dependencies in their projects.
+              That way they can save a lot of time and focus on development.
+              Usually the newest version of a software package has fixed the known security vulnerabilities from the past.
+              It makes sense to keep their dependencies up-to-date ;-)
             </p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6" style="padding-top: 50px; text-align: center;" >
-            <%= image_tag "marketing/chart-out-dated-ratio-2.png", :class=>"chart-outdated" %>
+            <%= link_to image_tag("marketing/01-veye-dependencies.png", :style => "width: 100%;"), "/assets/marketing/01-veye-dependencies.png" %>
         </div>
     </div>
 
