Update asset paths on lp

--- a/app/views/shared/_feature_security.html.erb
+++ b/app/views/shared/_feature_security.html.erb
@@ -15,7 +15,7 @@ notifications if one of your dependencies has a known security vulnerability.
             </p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6" style="text-align: center; vertical-aligne: middle; padding-top: 100px;">
-            <%= link_to image_tag("marketing/01-veye-security.png", :style => "width: 100%;"), "/assets/marketing/01-veye-security.png" %>
+            <%= link_to image_tag("marketing/01-veye-security.png", :style => "width: 100%;"), asset_path("/assets/marketing/01-veye-security.png") %>
         </div>
     </div>
 
