--- a/app/views/shared/_feature_version.html.erb
+++ b/app/views/shared/_feature_version.html.erb
@@ -16,7 +16,7 @@
             </p>
         </div>
         <div class="col-lg-5 col-lg-offset-2 col-sm-6" style="padding-top: 50px; text-align: center;" >
-            <%= link_to image_tag("marketing/01-veye-dependencies.png", :style => "width: 100%;"), "/assets/marketing/01-veye-dependencies.png" %>
+            <%= link_to image_tag("marketing/01-veye-dependencies.png", :style => "width: 100%;"), asset_path("/assets/marketing/01-veye-dependencies.png") %>
         </div>
     </div>
 
