--- a/app/views/shared/_feature_license.html.erb
+++ b/app/views/shared/_feature_license.html.erb
@@ -21,7 +21,7 @@ break your build on the CI server if there is a license violation.
             </p>
         </div>
         <div class="col-lg-5 col-sm-pull-6 col-sm-6" style="padding-top: 50px; text-align: center;">
-            <%= link_to image_tag("marketing/01-veye-licenses.png", :style => "width: 100%;"), "/assets/marketing/01-veye-licenses.png" %>
+            <%= link_to image_tag("marketing/01-veye-licenses.png", :style => "width: 100%;"), asset_path("/assets/marketing/01-veye-licenses.png") %>
         </div>
     </div>
 </div>
