--- a/app/views/shared/_feature_license.html.erb
+++ b/app/views/shared/_feature_license.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+        <div class="col-lg-5 col-sm-6">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">License Notifications</h2>
@@ -20,7 +20,7 @@ can react immediately! Depending on your software development process we can eve
 break your build on the CI server if there is a license violation.
             </p>
         </div>
-        <div class="col-lg-5 col-sm-pull-6 col-sm-6" style="padding-top: 50px; text-align: center;">
+        <div class="col-lg-5 col-lg-offset-2 col-sm-6" style="padding-top: 50px; text-align: center;" >
             <%= link_to image_tag("marketing/01-veye-licenses.png", :style => "width: 100%;"), asset_path("marketing/01-veye-licenses.png") %>
         </div>
     </div>
