Adjust header on landing page

--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -75,8 +75,11 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                        <h1>VersionEye</h1>
-                       <h3>
-                        notifies you about <span style="color: orange;">out-dated dependencies</span>, <span style="color: red;">security vulnerabilities</span> and <span style="color: red;">license violations</span>
+                       <h3 style="font-weight: normal;">
+                        notifies you about
+                        <span style="font-size: 100%; font-weight: bold;">security vulnerabilities</span>,
+                        <span style="font-size: 100%; font-weight: bold;">license violations</span> and
+                        <span style="font-size: 100%; font-weight: bold;">out-dated dependencies</span>
                         in your Git repositories
                        </h3>
                     </div>
